Added requirement for Spatial Analyst license if raster analysis, fixed bug in apply to skip predictor types, added workspace reset in p3G

--- a/XLUR/Code/Documentation/XLUR_manual_BrowserFriendly.html
+++ b/XLUR/Code/Documentation/XLUR_manual_BrowserFriendly.html
@@ -52,7 +52,7 @@ $(document).ready(function () {
             <div class="col-xs-3">
         <div id="header">
     <h1 class="title">XLUR Wizard</h1>
-                <h4 class="date"><em>v.2020-04-26</em></h4>
+                <h4 class="date"><em>v.2020-05-05</em></h4>
         </div>
     </div>
 </div>
@@ -81,7 +81,7 @@ $(document).ready(function () {
 
 <div id="installation" class="section level1">
 <h1>Installation</h1>
-<p>System requirements: Windows 10, ArcGIS Pro v2.2.4 or higher</p>
+<p>System requirements: Windows 10, ArcGIS Pro v2.2.4 or higher, License for Spatial Analyst extension if analysis of raster data is required</p>
 <p>The XLUR tools require a small number of additional Python packages to be installed. In ArcGIS Pro this can be done using the Python Package Manager. Follow these steps to install additional Python packages:</p>
 <ol style="list-style-type: decimal">
 <li>Open ArcGIS Pro. Click the About ArcGIS Pro button in the bottom left corner (denoted by the red arrow in the screenshot below). <em>In ArcGIS Pro v.2.3 this button is called Settings.</em></li>
