--- a/XLUR/Code/Documentation/p3_ApplyModel.html
+++ b/XLUR/Code/Documentation/p3_ApplyModel.html
@@ -9,7 +9,7 @@
     number of models, complexity of the models and data, and number of receptor points. If the apply stage seems excessively long,
     look at the messages at the bottom of the Geoprocessing pane (hover over ApplyLUR or toggle the Show or Hide Messages button to see messages).
     If you see the following message "+++ERROR+++ Uncaught exception -> See GOTCHA" an error has occured. Open the GOTCHA file for more information.</p>
-  <p>Once the model has been applied a green tick mark will appear. Modelled values will be stored in the <em>[Name]_receptors_[Date]_[Time]</em>
+  <p>Once the model has been applied a green tick mark will appear. Modelled values will be stored in the <em>pred_lyr</em>
     feature class in the File Geodatabase. Click the <span style="border:1px; border-style:solid; border-color:#040404; background-color:#C4C4C4; padding:0px 2px">Finish</span> button
     to close the wizard tool.
   </p>
