Added link to Packages.md

--- a/XLUR/Code/Documentation/XLUR_documentation.html
+++ b/XLUR/Code/Documentation/XLUR_documentation.html
@@ -52,7 +52,7 @@ $(document).ready(function () {
             <div class="col-xs-3">
         <div id="header">
     <h1 class="title">XLUR Wizard</h1>
-                <h4 class="date"><em>v.2020-05-20</em></h4>
+                <h4 class="date"><em>v.2020-05-22</em></h4>
         </div>
     </div>
 </div>
@@ -82,7 +82,7 @@ $(document).ready(function () {
 <div id="installation" class="section level1">
 <h1>Installation</h1>
 <p>System requirements: Windows 10, ArcGIS Pro v2.2.4 or higher, License for Spatial Analyst extension if analysis of raster data is required</p>
-<p>The XLUR tools require a small number of additional Python packages to be installed. In ArcGIS Pro this can be done using the Python Package Manager. Follow these steps to install additional Python packages:</p>
+<p>XLUR uses a number of Python modules/packages; however, most of these are Python base modules or are pre-installed with ArcGIS Pro (see the <a href="https://github.com/anmolter/XLUR/blob/master/Packages.md">repository</a> for a list of the required packages). Only four additional packages need to be installed. In ArcGIS Pro this can be done using the Python Package Manager. Follow these steps to install additional Python packages:</p>
 <ol style="list-style-type: decimal">
 <li>Open ArcGIS Pro. Click the About ArcGIS Pro button in the bottom left corner (denoted by the red arrow in the screenshot below). <em>In ArcGIS Pro v.2.3 this button is called Settings.</em></li>
 </ol>
@@ -1827,7 +1827,7 @@ div.red {border:2px; border-style:solid; border-color:#FF0000; background-color:
 </div>
 <div id="tutorial" class="section level1">
 <h1>Tutorial</h1>
-<p>This section provides a guided tutorial for building and applying a LUR model using the XLUR wizard. In this tutorial you will build and apply a predictive air pollution model for the Greater Manchester area using <a href="https://github.com/anmolter/XLUR/blob/master/ExampleData/ExampleData_Sources.md">openly accessible datasets</a> on monitored Nitrogen Dioxide (NO<sub>2</sub>) concentrations, land use categories, road networks, and emission sources.</p>
+<p>This section provides a guided tutorial for building and applying a LUR model using the XLUR wizard. In this tutorial you will build and apply a predictive air pollution model for the Greater Manchester area using <a href="https://github.com/anmolter/XLUR/blob/master/ExampleData/ExampleData_Sources.md">openly accessible datasets</a> on monitored Nitrogen Dioxide (NO<sub>2</sub>) concentrations, land use categories, road networks, and emission sources. Please note that the purpose of this tutorial is to illustrate the use of the XLUR wizard, not to develop a high performing LUR model; therefore, only a small number of input datasets are used in this tutorial.</p>
 <div id="before-you-start" class="section level2">
 <h2>Before you start</h2>
 <ol style="list-style-type: decimal">
